--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "eslint": "5.15.3",
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-import": "2.15.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-mozilla": "1.1.2",
     "eslint-plugin-no-unsanitized": "3.0.2",
     "eslint-plugin-react": "7.12.3",
@@ -103,7 +104,7 @@
     "mocha": "6.1.3",
     "mocha-webpack": "1.1.0",
     "mock-require": "3.0.3",
-    "node-sass": "4.11.0",
+    "node-sass": "4.12.0",
     "nodemon": "1.18.10",
     "npm-run-all": "4.1.4",
     "onchange": "5.2.0",
